--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title> DNU Web Portfolio</title>
   </head>
   <body>
-    Welcome to DNU Web
+   <h1> Welcome to DNU Web</h1>
   </body>
 </html>
